<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.activity.AutomaticconsumptionActivity">

        <include layout="@layout/header_bar" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_200"
            android:layout_margin="@dimen/margin_10"
            android:background="@drawable/tip_button_bg"
            android:elevation="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_10"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:text="@string/money"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/textSize_30" />

            <EditText
                android:id="@+id/automaticcnsumption_keyboard_enter_money"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@null"
                android:gravity="center"
                android:hint="@string/autoinput_money"
                android:inputType="numberDecimal"
                android:singleLine="true"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHint="@color/colorPrimaryDark"
                android:textCursorDrawable="@null"
                android:textSize="@dimen/textSize_35"
                android:textStyle="bold" />
        </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="@dimen/width_10"
            android:layout_height="@dimen/height_20"
            android:layout_marginLeft="@dimen/margin_10"
            android:background="@color/colorPrimary">

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_10"
            android:text="@string/tip"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/textSize_18"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_20"
        android:text="@string/tip_1"
        android:textColor="@color/icon"
        android:textSize="@dimen/textSize_16" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_20"
        android:text="@string/tip_2"
        android:textColor="@color/icon"
        android:textSize="@dimen/textSize_16" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_20"
        android:text="@string/tip_3"
        android:textColor="@color/icon"
        android:textSize="@dimen/textSize_16" />

    <ImageView
        android:id="@+id/auto_face_pay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/margin_60"
        android:src="@mipmap/facepay" />

</LinearLayout>