<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.activity.LoginActivity">

    <ImageView
        android:layout_width="@dimen/height_80"
        android:layout_height="@dimen/width_80"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/margin_160"
        android:layout_marginBottom="@dimen/margin_60"
        android:scaleType="centerCrop"
        android:src="@mipmap/ic_launcher" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/username_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_50"
            android:background="@null"
            android:drawableStart="@mipmap/ren"
            android:drawableLeft="@mipmap/ren"
            android:hint="@string/username"
            android:paddingLeft="@dimen/padding_10"
            android:paddingTop="@dimen/padding_10"
            android:paddingBottom="@dimen/padding_20"
            android:singleLine="true"
            android:textColor="@color/icon"
            android:textCursorDrawable="@null"
            android:textSize="@dimen/textSize_28" />
    </com.google.android.material.textfield.TextInputLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passsword_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_50"
                android:background="@null"
                android:drawableStart="@mipmap/mima"
                android:drawableLeft="@mipmap/mima"
                android:hint="@string/password"
                android:inputType="numberPassword"
                android:paddingLeft="@dimen/padding_10"
                android:paddingTop="@dimen/padding_10"
                android:paddingBottom="@dimen/padding_20"
                android:singleLine="true"
                android:textColor="@color/icon"
                android:textCursorDrawable="@null"
                android:textSize="@dimen/textSize_28" />
        </com.google.android.material.textfield.TextInputLayout>
    </RelativeLayout>

    <RadioButton
        android:id="@+id/remenberpassword_rb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_50"
        android:text="@string/remember_password"
        android:textColor="@color/icon"
        android:textSize="@dimen/textSize_20" />

    <Button
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_80"
        android:layout_margin="@dimen/margin_50"
        android:background="@drawable/login_button_bg"
        android:text="@string/login"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/textSize_26" />

</LinearLayout>