<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingTop="@dimen/padding_80"
    android:paddingBottom="@dimen/padding_80">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_70"
        android:background="@color/colorPrimaryDark">

        <ImageView
            android:layout_width="@dimen/width_40"
            android:layout_height="@dimen/height_40"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/margin_100"
            android:src="@mipmap/xingming" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/margin_320"
            android:text="@string/name"
            android:textSize="@dimen/textSize_26" />

        <TextView
            android:id="@+id/scm_name_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/margin_320"
            android:text="沈程阳"
            android:textSize="@dimen/textSize_26" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_70"
        android:background="@color/color_fafafa">

        <ImageView
            android:layout_width="@dimen/width_40"
            android:layout_height="@dimen/height_40"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/margin_100"
            android:src="@mipmap/cardnum" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/margin_320"
            android:text="@string/kbh"
            android:textSize="@dimen/textSize_26" />

        <TextView
            android:id="@+id/scm_cradnum_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/margin_320"
            android:text=""
            android:textSize="@dimen/textSize_26" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_70"
        android:background="@color/colorPrimaryDark">

        <ImageView
            android:layout_width="@dimen/width_40"
            android:layout_height="@dimen/height_40"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/margin_100"
            android:src="@mipmap/yue" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/margin_320"
            android:text="@string/balance"
            android:textSize="@dimen/textSize_26" />

        <TextView
            android:id="@+id/scm_balance_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/margin_320"
            android:text="100.00"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/textSize_28" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_70"
        android:background="@color/color_fafafa">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/margin_320"
            android:text="@string/ccount"
            android:textSize="@dimen/textSize_26" />

        <TextView
            android:id="@+id/scm_ccount_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/margin_320"
            android:text="1"
            android:textSize="@dimen/textSize_26" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_70"
        android:background="@color/colorPrimaryDark">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/margin_320"
            android:text="@string/status"
            android:textSize="@dimen/textSize_26" />

        <TextView
            android:id="@+id/scm_status_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/margin_320"
            android:text="可以消费"
            android:textSize="@dimen/textSize_26" />
    </RelativeLayout>
</LinearLayout>