<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/header_bar" />


    <com.moredian.entrance.guard.view.designview.ReboundScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorPrimaryDark"
                android:orientation="vertical"
                android:paddingBottom="@dimen/height_350">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_10"
                    android:text="@string/xfms"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/textSize_26"
                    android:textStyle="bold"
                    android:visibility="gone" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorAccent"
                    android:visibility="gone" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_160"
                    android:layout_margin="@dimen/margin_10"
                    android:visibility="gone">

                    <LinearLayout
                        android:id="@+id/main_ll1"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="?android:attr/selectableItemBackground"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="@dimen/width_70"
                            android:layout_height="@dimen/height_70"
                            android:src="@mipmap/main_manualconsumption" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/margin_10"
                            android:text="@string/sdkk"
                            android:textSize="@dimen/textSize_20" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/main_ll2"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="?android:attr/selectableItemBackground"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="@dimen/width_70"
                            android:layout_height="@dimen/height_70"
                            android:src="@mipmap/main_auto" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/margin_10"
                            android:text="@string/zdkk"
                            android:textSize="@dimen/textSize_20" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/main_ll3"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="@dimen/width_70"
                            android:layout_height="@dimen/height_70"
                            android:src="@mipmap/main_time" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/margin_10"
                            android:text="@string/sdde"
                            android:textSize="@dimen/textSize_20" />
                    </LinearLayout>
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_20"
                    android:text="@string/ryxx"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/textSize_26"
                    android:textStyle="bold" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_160"
                    android:layout_margin="@dimen/margin_10">

                    <LinearLayout
                        android:id="@+id/main_ll4"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="?android:attr/selectableItemBackground"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="@dimen/width_70"
                            android:layout_height="@dimen/height_70"
                            android:src="@mipmap/main_persons" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/margin_10"
                            android:text="@string/rygl"
                            android:textSize="@dimen/textSize_20" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/main_ll5"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="?android:attr/selectableItemBackground"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="@dimen/width_70"
                            android:layout_height="@dimen/height_70"
                            android:src="@mipmap/chongzhi" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/margin_10"
                            android:text="@string/vouchercenter"
                            android:textSize="@dimen/textSize_20" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="?android:attr/selectableItemBackground"
                        android:gravity="center"
                        android:orientation="vertical">

                    </LinearLayout>
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_20"
                    android:text="@string/bbzx"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/textSize_26"
                    android:textStyle="bold" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_160"
                    android:layout_margin="@dimen/margin_10">

                    <LinearLayout
                        android:id="@+id/main_ll6"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="?android:attr/selectableItemBackground"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="@dimen/width_70"
                            android:layout_height="@dimen/height_70"
                            android:src="@mipmap/xiaofeijilu" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/margin_10"
                            android:text="消费记录"
                            android:textSize="@dimen/textSize_20" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/main_ll7"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="?android:attr/selectableItemBackground"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="@dimen/width_70"
                            android:layout_height="@dimen/height_70"
                            android:src="@mipmap/chongzhijilu" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/margin_10"
                            android:text="充值记录"
                            android:textSize="@dimen/textSize_20" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/main_ll11"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="@dimen/width_70"
                            android:layout_height="@dimen/height_70"
                            android:src="@mipmap/baobiao" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/margin_10"
                            android:text="七天报表"
                            android:textSize="@dimen/textSize_20" />
                    </LinearLayout>

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_20"
                    android:text="@string/xtsz"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/textSize_26"
                    android:textStyle="bold" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_160"
                    android:layout_margin="@dimen/margin_10">

                    <LinearLayout
                        android:id="@+id/main_ll8"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="?android:attr/selectableItemBackground"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="@dimen/width_70"
                            android:layout_height="@dimen/height_70"
                            android:src="@mipmap/shezhi" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/margin_10"
                            android:text="@string/jqsz"
                            android:textSize="@dimen/textSize_20" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/main_ll9"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="?android:attr/selectableItemBackground"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="@dimen/width_70"
                            android:layout_height="@dimen/height_70"
                            android:src="@mipmap/wangluo" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/margin_10"
                            android:text="@string/wlsz"
                            android:textSize="@dimen/textSize_20" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/main_ll10"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="?android:attr/selectableItemBackground"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="@dimen/width_70"
                            android:layout_height="@dimen/height_70"
                            android:src="@mipmap/ps" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/margin_10"
                            android:text="@string/personset"
                            android:textSize="@dimen/textSize_20" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </android.support.v4.widget.NestedScrollView>

    </com.moredian.entrance.guard.view.designview.ReboundScrollView>
</LinearLayout>